Header removed horizontal margin and padding on nav elements to fix alignment issue

--- a/src/components/Header/Header.scss
+++ b/src/components/Header/Header.scss
@@ -51,12 +51,12 @@
     font-weight: bold;
     letter-spacing: 0.7px;
     color: white; //inherit;
-    padding: 10px;
+    padding: 10px 0;
     transition: color 0.3s;
 
     position: relative;
     display: inline-block;
-    margin: 15px 25px;
+    margin: 15px 0;
     width: 100%;
 
     &:hover {
